# napi-property-descriptor

./: .gitignore  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
cppsrc/: #main.cpp#  .#main.cpp  main.cpp
